# ConsoCompteurElectrique_avec_RPi

./: .gitignore  README.md  RaF R-Pi.xlsx
Affichage distant/: data.json  highcharts.js  highstock.js  menu.html  style.css
Code/Compteur_Linky/: Compteur_Linky.cbp  Configuration.dxgn  README.txt  exe_Compteur_Linky  make_dot2PNG.bat
Code/Compteur_Linky/Sources/: CMakeLists.txt  Decoder_Trames.c  Fonctions_UART.h  Sortir.h  exe_Compteur_Linky
Code/Compteur_Linky/Sources/inc/: Acquerir.h  Decoder_Trames.h  Fonctions_Extract.h  Horodater.h  LireEcrire.h
Code/Compteur_Linky/Sources/src/: Acquerir.c  Fonctions_Extract.c  Fonctions_UART.c  Horodater.c  LireEcrire.c  Main.c  Sortir.c
Documents/: Commande 2013-05-13.xls  Configuration de la R-Pi.docx  Description du projet.docx  Divers sous R-Pi.txt  IP static.txt  Illustration Papp Linky.pptx  Illustrations.pptx  Récap.docx  Trames.xlsx
Documents/Drivers-Bibliothèques/: bcm2835-1.25 - README.txt
FTP/: FTP_R-Pi.txt  test_PCSeb.bat  test_PCSeb.txt
Releves/Fichiers csv/: Releve_2013-11-01.csv  Releve_2013-12-15.csv  Releve_2013-12-28.csv  Releve_2013-Essai.csv  Releve_2014-05-04.csv
Releves/Fichiers txt/: Releve_2013-11-01.txt  Releve_2013-12-15.txt  Releve_2013-12-28.txt
Releves/Variables/: 049701078744_2013-12-28.sod  (+7 more)
Scilab/: Calculs.sci  ChargerTxt.sci  ChargerVariables.sci  Charger_Txt.sci  Charger_Variables.sci  Configuration.dxgn  DOCUMENTER.sce  GESTION_RELEVES.sce  GlrBrandtMoy.sci  Heures_Fonctionnement.sci  Import_points.sce  Puissance_HPHC.sci  Tracer_Graph.sci  test_import.sce  tracerGraph.sci
(+33 files in other folders)
